--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <div>
             <a href="https://www.instagram.com/alimustofa7888?igsh=MW9kaDE0NGttaWw5ZQ==" target="_blank" rel="noopener">
                 <img src="gambar/logo-IG.webp" />
+            <a href="https://github.com/alim-svg77" target="_blank" rel="noopener">
+                <img src="gambar/logo-GitHub.webp" />
             </a>
         </div>
 
