--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   <body>
     <header class="navbar">
       <div class="j-atas">
-        <div class="jamet">HOME</div>
-        <div class="jamet">Kelulusan</div>
-        <div class="jamet">contact</div>
-        <div class="jamet">Pengalaman Kerja</div>
+        <a href="#"  class="jamet active">HOME</a>
+        <a href="#"  class="jamet">Kelulusan</a>
+        <a href="#"  class="jamet">Contact</a>
+        <a href="#"  class="jamet">Pengalaman kerja</a>
       </div>
+     <div class="burger" onclick="toggleMenu()"
+       <div class="line1" ></div>
+       <div class="line2" ></div>
+       <div class="line3" ></div>
+     </div>
       <img src="gambar/Aliando.jpeg" class="pp" />
     </header>
 
